# libpll-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure.ac  update_devnobison.sh
benchmark/: Makefile  PartialsMicroBenchmark.Rmd  README.md  benchmark.py  benchmark.sh  benchmark_extraction.py  benchmark_full.sh  detail_extraction.py  micro_benchmark_partials.py
benchmark/src/: derivatives-aa-benchmark-simple.c  derivatives-aa-benchmark.c  derivatives-benchmark.c  likelihood-aa-benchmark.c  partials-micro-benchmark.c  partials-oddstates-benchmark.c
benchmark/src/benchmarks/: derivatives-benchmark.c  partials-micro-benchmark.c  test-cache.c
benchmark/src/lib/: test-cache.c  test_avx2.c  test_avx512.c
docs/: libpll.md  pll_operation_t.md  pll_partition_t.md  pll_utree_t.md  pllmod_treeinfo_t.md  pllmodules.md
examples/stepwise/: stepwise.c
src/: CMakeLists.txt  Makefile.am  clv_manager.c  clv_reuse.c  compress.c  core_derivatives.c  core_derivatives_avx.c  core_derivatives_avx2.c  core_derivatives_avx512f.c  core_derivatives_avx512f_sml.c  core_derivatives_sse.c  core_likelihood.c  core_likelihood_avx.c  core_likelihood_avx2.c  core_likelihood_avx512f.c  core_likelihood_avx512f_sml.c  core_likelihood_sse.c  core_partials.c  core_partials_avx.c  core_partials_avx2.c  core_partials_avx512f.c  core_partials_avx512f_sml.c  core_partials_sse.c  core_pmatrix.c  core_pmatrix_avx.c  core_pmatrix_avx2.c  core_pmatrix_avx512f.c  core_pmatrix_sse.c  derivatives.c  fast_parsimony.c  fast_parsimony_avx.c  fast_parsimony_avx2.c  fast_parsimony_sse.c  fasta.c  hardware.c  lex_rtree.c  lex_rtree.l  lex_utree.c  lex_utree.l  likelihood.c  (+23 more)
test/: .gitignore  Makefile  README.md  runtest.py
test/src/: 00002_partials_ODD_benchmark.c  00002_partials_aa_calc.c  00002_partials_benchmark.c  00010_NMDU_lkcalc.c  00011_NMAU_lkcalc.c  00012_NMOU_lkcalc.c  00020_NMDR_lkcalc.c  00021_NMAR_lkcalc.c  00022_NMOR_lkcalc.c  00030_NMDU_gamma.c  00032_NMOU_gamma.c  00110_NPDN_fasta.c  00120_NPAN_fasta.c  alpha-cats.c  asc-bias.c  common.c  common.h  compress-patterns.c  derivatives-aa.c  derivatives-oddstates.c  derivatives.c  newick-tree.c  partial-traversal.c  partials-aa.c  partials.c  pmatrix-aa.c  pmatrix.c  protein-models.c  rooted-tipinner.c  rooted.c  scaling.c  simd_count.h  sumtables-aa-benchmark.c  sumtables-oddstates-benchmark.c
