cmake_minimum_required(VERSION 3.9)
project(libpll_2)

set(CMAKE_CXX_STANDARD 11)

add_definitions(-DHAVE_CONFIG_H)

include_directories(.)
include_directories(src)
include_directories(test/src)

add_executable(libpll_2
        benchmark/src/derivatives-aa-benchmark.c
        benchmark/src/likelihood-aa-benchmark.c
        benchmark/src/partials-benchmark.c
        benchmark/src/partials-oddstates-benchmark.c
        benchmark/src/sumtables-aa-benchmark.c
        benchmark/src/sumtables-oddstates-benchmark.c
        src/compress.c
        src/core_derivatives.c
        src/core_derivatives_avx.c
        src/core_derivatives_avx2.c
        src/core_derivatives_avx512f.c
        src/core_derivatives_avx512f_sml.c
        src/core_derivatives_sse.c
        src/core_likelihood.c
        src/core_likelihood_avx.c
        src/core_likelihood_avx2.c
        src/core_likelihood_avx512f.c
        src/core_likelihood_avx512f_sml.c
        src/core_likelihood_sse.c
        src/core_partials.c
        src/core_partials_avx.c
        src/core_partials_avx2.c
        src/core_partials_avx512f.c
        src/core_partials_avx512f_sml.c
        src/core_partials_sse.c
        src/core_pmatrix.c
        src/core_pmatrix_avx.c
        src/core_pmatrix_avx2.c
        src/core_pmatrix_avx512f.c
        src/core_pmatrix_sse.c
        src/derivatives.c
        src/fast_parsimony.c
        src/fast_parsimony_avx.c
        src/fast_parsimony_avx2.c
        src/fast_parsimony_sse.c
        src/fasta.c
        src/gamma.c
        src/hardware.c
        src/lex_rtree.c
        src/lex_utree.c
        src/likelihood.c
        src/list.c
        src/maps.c
        src/models.c
        src/output.c
        src/parse_rtree.c
        src/parse_rtree.h
        src/parse_utree.c
        src/parse_utree.h
        src/parsimony.c
        src/partials.c
        src/phylip.c
        src/pll.c
        src/pll.h
        src/random.c
        src/repeats.c
        src/rtree.c
        src/stepwise.c
        src/utree.c
        src/utree_moves.c
        src/utree_svg.c
        test/src/00010_NMDU_lkcalc.c
        test/src/00011_NMAU_lkcalc.c
        test/src/00012_NMOU_lkcalc.c
        test/src/00020_NMDR_lkcalc.c
        test/src/00021_NMAR_lkcalc.c
        test/src/00022_NMOR_lkcalc.c
        test/src/00030_NMDU_gamma.c
        test/src/00032_NMOU_gamma.c
        test/src/00110_NPDN_fasta.c
        test/src/00120_NPAN_fasta.c
        test/src/alpha-cats.c
        test/src/asc-bias.c
        test/src/common.c
        test/src/common.h
        test/src/derivatives-aa.c
        test/src/derivatives-oddstates.c
        test/src/derivatives.c
        test/src/hky.c
        test/src/partial-traversal.c
        test/src/partials-aa.c
        test/src/pmatrix-aa.c
        test/src/pmatrix.c
        test/src/protein-models.c
        test/src/rng.h
        test/src/rooted-tipinner.c
        test/src/rooted.c
        test/src/scaling.c
        examples/heterotachy/heterotachy.c
        examples/lg4/lg4.c
        examples/load-utree/load-utree.c
        examples/newick-export/newick-export.c
        examples/newick-fasta-rooted/newick-fasta-rooted.c
        examples/newick-fasta-unrooted/newick-fasta-unrooted.c
        examples/newick-phylip-unrooted/newick-phylip-unrooted.c
        examples/newton/newton.c
        examples/parsimony/npr-pars.c
        examples/partial-traversal/partial.c
        examples/protein-list/protein-list.c
        examples/rooted/rooted.c
        examples/rooted-tacg/rooted-tacg.c
        examples/stepwise/stepwise.c
        examples/unrooted/unrooted.c
        config.h)
